--- a/web/ui/react-app/package.json
+++ b/web/ui/react-app/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.5.3",
     "apexcharts": "^3.18.1",
     "axios": "^0.19.2",
     "lodash": "^4.17.15",
