--- a/web/ui/react-app/package.json
+++ b/web/ui/react-app/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-simple-code-editor": "^0.11.0",
+    "react-timeago": "^4.4.0",
     "recharts": "^1.8.5",
     "source-map-explorer": "^2.4.2"
   },
