--- a/web/ui/react-app/package.json
+++ b/web/ui/react-app/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "node-sass": "^4.14.1",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-apexcharts": "^1.3.7",
