--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,7 +35,11 @@ jobs:
     - name: Test
       run: make test
 
-    - name: Coveralls
-      uses: coverallsapp/github-action@master
+    - name: Codecov
+      uses: codecov/codecov-action@v1
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
+        file: ./acc.out
+        flags: unittests # optional
+        name: codecov-umbrella # optional
+        fail_ci_if_error: true # optional (default = false)
