update readme with codecov badge

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,7 +33,8 @@ jobs:
         make build
 
     - name: Test
-      run: make test
+      run: |
+        make test
 
     - name: Codecov
       uses: codecov/codecov-action@v1
