add entc as dep in package install

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Get dependencies
       run: |
-        make lint-pkgs
+        make install-pkgs
         
     - name: Build
       run: |
