--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,9 +17,9 @@ jobs:
     name: Push Docker image to Github Container Registry
     runs-on: ubuntu-latest
     steps:
-      - name: Build image
-        run: docker build -t $IMAGE_NAME .
-      
+      - name: Check out the repo
+        uses: actions/checkout@v2
+
       -
         name: Login to GitHub Container Registry
         uses: docker/login-action@v1
@@ -27,7 +27,7 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
