--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,5 +33,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: latest
