--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
+yarn.lock
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.idea/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+node_modules
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
