--- a/web/ui/gobench-ui/package.json
+++ b/web/ui/gobench-ui/package.json
@@ -13,7 +13,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint-fix"
+      "pre-commit": "yarn run lint-fix"
     }
   },
   "dependencies": {
@@ -52,7 +52,7 @@
     "react-draft-wysiwyg": "^1.14.5",
     "react-helmet": "^6.0.0",
     "react-highlight-words": "^0.16.0",
-    "react-intl": "^4.5.1",
+    "react-intl": "^5.6.9",
     "react-jvectormap": "^0.0.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
