--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,22 +19,24 @@ jobs:
         go-version: ^1.16
       id: go
 
-    - name: Check out code into the Go module directory
+    - name: Set up Nodejs 16
+      uses: actions/setup-node@v16
+      with:
+        node-version: ^16.3
+        cache: npm
+      id: node
+
+    - name: Check out code
       uses: actions/checkout@v2
 
-    - name: Get dependencies
-      run: |
-        make lint-pkgs
-        
     - name: Build
       run: |
+        make build-web-ui
+        make lint-pkgs
         make lint
         make examples
-        make build
-
-    - name: Test
-      run: |
         make test
+        make build
 
     - name: Codecov
       uses: codecov/codecov-action@v1
