--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
       id: go
 
     - name: Set up Nodejs 16
-      uses: actions/setup-node@16
+      uses: actions/setup-node@v2
       with:
         node-version: ^16.3
         cache: npm
