--- a/web/ui/gobench-ui/package.json
+++ b/web/ui/gobench-ui/package.json
@@ -4,86 +4,56 @@
   "version": "1.1.0",
   "private": true,
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "build-noauth": "REACT_APP_AUTHENTICATED=true react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "build-noauth": "REACT_APP_AUTHENTICATED=true react-scripts build",
+    "test": "react-scripts test",
     "lint": "standard ",
     "lint-fix": "standard --fix"
   },
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
-    "antd": "^4.2.0",
+    "antd": "^5.7.2",
     "apexcharts": "^3.21.0",
-    "async": "^3.2.2",
-    "axios": "^0.21.2",
-    "axios-mock-adapter": "^1.18.1",
-    "bootstrap": "^4.4.1",
-    "chart.js": "^2.9.3",
-    "chartist": "^0.11.4",
-    "chartist-plugin-tooltips-updated": "^0.1.2",
+    "axios": "^1.4.0",
+    "axios-mock-adapter": "^1.21.5",
+    "bootstrap": "^5.3.1",
     "classnames": "^2.2.6",
-    "connected-react-router": "^6.8.0",
-    "d3-dsv": "^1.2.0",
-    "d3-format": "^1.4.4",
-    "d3-time-format": "^2.2.3",
-    "draft-js": "^0.11.5",
-    "faker": "^5.1.0",
+    "connected-react-router": "^6.9.3",
+    "crypto-browserify": "^3.12.0",
+    "dayjs": "^1.11.9",
     "history": "^4.10.1",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.15",
-    "moment": "2.29.4",
     "nprogress": "^0.2.0",
     "prismjs": "^1.27.0",
     "prop-types": "^15.7.2",
     "qs": "^6.9.3",
-    "react": "^16.13.1",
+    "react": "18.2.0",
     "react-apexcharts": "^1.3.7",
-    "react-c3js": "^0.1.20",
-    "react-chartist": "^0.14.3",
-    "react-chartjs-2": "^2.9.0",
-    "react-charts": "^2.0.0-beta.7",
-    "react-dom": "^16.13.1",
-    "react-draft-wysiwyg": "^1.14.5",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.0.0",
-    "react-highlight-words": "^0.16.0",
+    "react-highlight-words": "^0.20.0",
     "react-intl": "^5.6.9",
-    "react-jvectormap": "^0.0.1",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-redux": "^7.2.0",
+    "react-redux": "^8.1.1",
     "react-resizable": "^1.10.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "react-simple-code-editor": "^0.11.0",
-    "react-sortable-tree": "^2.7.1",
-    "react-sortablejs": "^2.0.11",
-    "react-stickynode": "^2.1.1",
-    "react-stockcharts": "^0.7.8",
-    "react-timeago": "^4.4.0",
-    "react-transition-group": "^4.3.0",
-    "reactstrap": "^8.4.1",
-    "recharts": "^1.8.5",
+    "react-router-dom": "5.1.2",
+    "react-simple-code-editor": "0.13.1",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
-    "sortablejs": "1.10.2",
     "store": "^2.0.12"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/prismjs": "^1.16.1",
-    "babel-plugin-import": "^1.13.0",
-    "customize-cra": "^0.9.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^5.0.0",
+    "customize-cra": "^1.0.0",
     "husky": "^4.2.3",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0",
     "lint-staged": "^10.0.8",
-    "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
-    "react-app-rewired": "^2.1.6",
-    "standard": "^14.3.1"
+    "react-scripts": "^5.0.1",
+    "sass": "^1.64.0"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -99,9 +69,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "resolutions": {
-    "moment": "2.29.4"
   },
   "standard": {
     "ignore": [
