--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,10 +19,10 @@ jobs:
         go-version: ^1.20
       id: go
 
-    - name: Set up Nodejs 14
+    - name: Set up Nodejs 16
       uses: actions/setup-node@v2
       with:
-        node-version: ^14.15
+        node-version: 16.20.1
       id: node
 
     - name: Check out code
